--- a/email-system/src/main/resources/application.properties
+++ b/email-system/src/main/resources/application.properties
@@ -2,11 +2,12 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 # Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
