--- a/email-system/pom.xml
+++ b/email-system/pom.xml
@@ -25,7 +25,7 @@
 		<java.version>1.8</java.version>
 		<flyway.user>SA</flyway.user>
         <flyway.password></flyway.password>
-        <flyway.schemas>db_schema</flyway.schemas>
+        <flyway.schemas>flyway_schema-history</flyway.schemas>
 	</properties>
 
 	<dependencies>
@@ -39,7 +39,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
+			<artifactId>flyway-core</artifactId>		
+            <version>5.2.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
