--- a/email-system/src/main/resources/application.properties
+++ b/email-system/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+# Flyway
+spring.flyway.check-location=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=PUBLIC
