--- a/email-system/pom.xml
+++ b/email-system/pom.xml
@@ -23,6 +23,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>     
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<flyway.user>SA</flyway.user>
         <flyway.password></flyway.password>
         <flyway.schemas>flyway_schema-history</flyway.schemas>
