--- a/email-system/src/main/resources/application.properties
+++ b/email-system/src/main/resources/application.properties
@@ -9,9 +9,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 # Hibernate
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 # Flyway
+spring.flyway.enabled=true
 spring.flyway.check-location=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.schemas=PUBLIC
+spring.flyway.baseline-on-migrate=false
