--- a/email-system/src/main/resources/application.properties
+++ b/email-system/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=none
 # Flyway
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.check-location=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.schemas=PUBLIC
