--- a/email-system/pom.xml
+++ b/email-system/pom.xml
@@ -77,7 +77,7 @@
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
 				<configuration>
-					<url>jdbc:h2:file:./target/foobar</url>
+					<url>jdbc:h2:file:./target/folder</url>
 					<user>sa</user>
 				</configuration>
 				<dependencies>
